--- a/index.html
+++ b/index.html
@@ -4,39 +4,42 @@
 	<meta charset="UTF-8">
 	<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<title>Javascript Calculator</title>
 </head>
 <body>
-	<div class="container">
-		<div class="row1">Basic Calculator</div>
-		<div class="row2">0</div> 
+	<div class="cotainer">
+		<div class="ro1 header">Basic Calculator</div>
+			<span id='screen'>0</span>
 		<div class="row3">
-				 <button id='ac'>AC</button>
-			     <button id='ce'>CE</button>
-			     <button id="divide" >/</button>	
-			     <button id='multiply'>*</button>	
+				 <button class='ac'>AC</button>
+			     <button class='ce'>CE</button>
+			     <button class="operands" id="/" >/</button>	
+			     <button class="operands" id='*'>*</button>	
 
-			     <button id='seven'>7</button>
-			     <button id='eight'>8</button>
-			     <button id='nine'>9</button>
-			      <button id='subtract'>-</button>
+			     <button id='7'>7</button>
+			     <button id='8'>8</button>
+			     <button id='9'>9</button>
+			     <button class="operands" id='-'>-</button>
 
-			     <button id='four'>4</button>
-			     <button id='five'>5</button>
-			     <button id='six'>6</button>
-			     <button id='add'>+</button>
+			     <button id='4'>4</button>
+			     <button id='5'>5</button>
+			     <button id='6'>6</button>
+			     <button class="operands" id='+'>+</button>
 			   
-			     <button id='one'>1</button>
-			     <button id='two'>2</button>
-			     <button id='three'>3</button>
-			     <button id='equal'>=</button>
+			     <button id='1'>1</button>
+			     <button id='2'>2</button>
+			     <button id='3'>3</button>
+			     <button class='total'>=</button>
 
-			     <button id='zero'>0</button>
-			     <button id='dot'>.</button>		 
+			     <button id='0' class="zero">0</button>
+			     <button class="operands" id='.'>.</button>		 
 		</div>
 	</div>
 	<footer>
 		Desinged & Coded by <a href="https://www.linkedin.com/in/jordan-pagkatipunan-7938b8106/" target="blank">Jordan Pagkatipunan</a>
 	</footer>
+
+	<script src='script.js'></script>
 </body>
 </html>
